# oyabun

./: .gitignore  AGENTS.md  CHANGELOG.md  PLAN.md  README.md
.claude/: launch.json
.cursor/: mcp.example.json
client/: Cargo.toml  index.html
client/characters/: boss_v3_atlas.rgba  oyabaun_player.glb  oyabaun_rival.glb  prop_r32_atlas.rgba  rival_v3_atlas.rgba
client/characters/boss_walk_frames/: metadata.json
client/characters/player_walk_frames/: metadata.json
client/characters/rival_walk_frames/: metadata.json
client/fpsweapons/: EXPORT.txt  LICENSE.txt  pistol.png.bak  plasma.png.bak  shotgun.png.bak  smg.png.bak
client/level_textures/tokyo_props/: EXPORT.txt
client/level_textures/tokyo_shops/: EXPORT.txt
client/levels/: tokyo_alley.blend  tokyo_alley.blend1  tokyo_alley.glb
client/props/: arcade_parked_car_blockout.glb  arcade_r32_prop.glb  m4a1_prop.glb
client/src/: arcade_level.rs  boss.rs  game.rs  gltf_level.rs  input.rs  lib.rs  loadout.rs  mesh.rs  net.rs  npc.rs  render.rs  street_dressing.rs
client/vfx/: EXPORT.txt
docs/: ARCHITECTURE.md  BLENDER_GLTF.md  CHARACTER_PIPELINE_HANDOFF.md  CLAUDE_ARCADE_TOKYO_HANDOFF.md  CURSOR_ARCADE_PARKED_VEHICLE.md  CURSOR_ARCADE_PROP_BILLBOARDS.md  CURSOR_ARCADE_TOKYO_LEVEL.md  CURSOR_CHARACTER_IMPROVEMENT.md  CURSOR_LEVEL_REDESIGN.md  HANDOFF_WEAPON_FPS_AND_NPC_ATTACH.md  LEVEL_RENDER_HANDOFF.md  PROTOCOL.md  character-gen-spec.md
infra/: Dockerfile.relay  docker-compose.yml
m4a13d/: README.md
protocol/: README.md
relay/: go.mod  go.sum
tools/: blender_apply_tokyo_shop_textures.py  (+19 more)
(+20 files in other folders)
