[package]
name = "oyabaun-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
console_error_panic_hook = "0.1"
glam = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wgpu = "23"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "Request",
  "RequestCache",
  "RequestInit",
  "Response",
] }
gltf = { version = "1.4.1", features = ["import", "names"] }
